Fix component placement and list overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ h1 {
   margin: 0;
   background-color: #222;
   color: lightskyblue;
-  z-index: 2;
 }
 
 /* Control Panel styles */
@@ -55,12 +54,13 @@ h1 {
 
 .locations-list {
   position: fixed;
-  height: calc(100vh - 4em);
+  height: calc(100vh - 7em);
   width: 100%;
   transform: translateY(-120%);
   transition: 500ms;
   background-color: transparent;
   z-index: 1;
+  overflow: auto;
 }
 
 .locations-list.open{
@@ -81,7 +81,7 @@ h1 {
 
 /* Map styles */
 .map-container {
-  height: calc(100vh - 3em);
+  height: calc(100vh - 3em - 3.2em);
   width: 100%;
 }
 
@@ -122,7 +122,7 @@ h1 {
   }
 
   .locations-list {
-    height: calc(100vh - 3em);
+    height: calc(100vh - 3em - 3.2em);
     position: relative;
     transform: initial;
     transition: initial;
